RESOLVED FIXED199978
[WHLSL] Checker needs to setError() when a property access node can't commit its base type
https://bugs.webkit.org/show_bug.cgi?id=199978
Summary [WHLSL] Checker needs to setError() when a property access node can't commit ...
Saam Barati
Reported 2019-07-20 07:17:08 PDT
...
Attachments
patch (4.08 KB, patch)
2019-07-20 07:48 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2019-07-20 07:48:45 PDT
Myles C. Maxfield
Comment 2 2019-07-20 20:27:30 PDT
r=me too
WebKit Commit Bot
Comment 3 2019-07-21 11:35:56 PDT
Comment on attachment 374554 [details] patch Clearing flags on attachment: 374554 Committed r247676: <https://trac.webkit.org/changeset/247676>
WebKit Commit Bot
Comment 4 2019-07-21 11:35:58 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2019-07-21 11:36:24 PDT
Note You need to log in before you can comment on or make changes to this bug.