[WHLSL] Checker needs to setError() when a property access node can't commit its base type https://bugs.webkit.org/show_bug.cgi?id=199978

Reviewed by Dean Jackson.

Source/WebCore:

Test: webgpu/whlsl/null-array-property-access.html

* Modules/webgpu/WHLSL/WHLSLChecker.cpp:
(WebCore::WHLSL::Checker::finishVisiting):

LayoutTests:

* webgpu/whlsl/null-array-property-access-expected.txt: Added.
* webgpu/whlsl/null-array-property-access.html: Added.


Canonical link: https://commits.webkit.org/213838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247676 268f45cc-cd09-0410-ab3c-d52691b4dbfc